--- a/style.css
+++ b/style.css
@@ -14,3 +14,22 @@
 .container{
     margin-bottom: 100px;
 }
+.cat1{
+    background-color: orange;
+}
+.cat2{
+    background-color: paleturquoise;
+}
+.cat3{
+    background-color:yellow;
+}
+.cat1,.cat2,.cat3{
+    padding: 10px 30px;
+    border-radius: 10px;
+}
+.categories img{
+    width: 100px;
+}
+.categories h1{
+    color: white;
+}
