--- a/style.css
+++ b/style.css
@@ -38,3 +38,10 @@
     border-radius: 6px;
     padding: 5px 10px;
 }
+#subscribe{
+    height: 300px;
+    color: gray;
+    background-color:#F69BCA;
+    margin-top: 100px;
+    pa
+}
